<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detalle">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
    />

    <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp" app:srcCompat="@drawable/foto_06"
            android:id="@+id/iv_foto"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <TextView
            android:text="Maricela Saavedra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Nombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_foto" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502"/>
    <TextView
            android:text="Globant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Empresa" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_Nombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_edad" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tv_Empresa"/>
    <TextView
            android:text="@string/titulo_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_peso"
            app:layout_constraintEnd_toStartOf="@+id/tv_telefono"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/tv_edad"
            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_Empresa"/>
    <TextView
            android:text="@string/titulo_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_telefono" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tv_Empresa"/>
    <TextView
            android:text="34 años"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_edad" android:layout_marginStart="35dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="56 kgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_peso" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/textView8"/>
    <TextView
            android:text="3985-9384"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_telefono" android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/titulo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="maricela@globant.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"/>
    <TextView
            android:text="@string/titulo_direccion"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/tv_direccion"
            app:layout_constraintStart_toEndOf="@+id/tv_email"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.852" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="Gorman 2309"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/et_email"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_direccion" app:layout_constraintHorizontal_bias="0.696"/>
</android.support.constraint.ConstraintLayout>