<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Nuevo">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
    />

    <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp" app:srcCompat="@drawable/foto_01"
            android:id="@+id/iv_foto"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Nombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_foto"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="24sp" android:hint="Nombre"
            android:inputType="text|textPersonName" android:singleLine="true"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Empresa" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_Nombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:hint="Empresa" android:inputType="text" android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_edad" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_Empresa"/>
    <TextView
            android:text="@string/titulo_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_peso"
            app:layout_constraintEnd_toStartOf="@+id/tv_telefono"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/tv_edad"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_Empresa" app:layout_constraintHorizontal_bias="0.568"/>
    <TextView
            android:text="@string/titulo_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_telefono" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_Empresa"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_edad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_edad" android:layout_marginStart="35dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="34 años" android:inputType="number" android:singleLine="true"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_peso"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_peso" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/et_telefono"
            app:layout_constraintStart_toEndOf="@+id/et_edad" android:layout_marginStart="16dp"
            android:hint="56 kgs" android:inputType="numberDecimal" android:singleLine="true"/>
    <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_telefono"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_telefono" android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center" android:hint="3985-9384" android:inputType="phone"
            android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_edad"/>
    <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" android:hint="maricela@globant.com"
            android:inputType="textEmailAddress" android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_direccion"
            app:layout_constraintStart_toEndOf="@+id/tv_email"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_telefono"
            app:layout_constraintHorizontal_bias="0.87"/>
    <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_direccion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/et_email"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_direccion" app:layout_constraintHorizontal_bias="0.696"
            android:hint="Gorman 2309" android:inputType="text" android:singleLine="true"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:id="@+id/tv_apellido" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" app:layout_constraintStart_toEndOf="@+id/tv_Nombre"
            android:layout_marginStart="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/iv_foto"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/tv_Empresa"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintVertical_bias="0.0" android:hint="Apellido" android:singleLine="true"/>

</android.support.constraint.ConstraintLayout>